resolve bug and updte webpack config

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -2,6 +2,5 @@
     <section>
         <h1>{{title}}</h1>
         <h2>{{content}}</h2>
-        <p><a ui-sref="about"></a></p>
     </section>
-</ndex-directive>    
+</index-directive>    
